--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,12 @@
 play.http.secret.key=${?APPLICATION_SECRET}
+
+db.default.driver=org.postgresql.Driver
+
+db.default.url="jdbc:postgresql://localhost:5432/tasks"
+db.default.url=${?DB_DEFAULT_URL}
+
+db.default.username="tasks"
+db.default.username=${?DB_DEFAULT_USERNAME}
+
+db.default.password="tasks"
+db.default.password=${?DB_DEFAULT_PASSWORD}
