Add tasks controller

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,3 +10,12 @@ db.default.username=${?DB_DEFAULT_USERNAME}
 
 db.default.password="tasks"
 db.default.password=${?DB_DEFAULT_PASSWORD}
+
+play.modules.enabled += utils.ClockModule
+
+tasks-context {
+  fork-join-executor {
+    parallelism-factor = 20.0
+    parallelism-max = 200
+  }
+}
