--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: scala
 dist: trusty
 sudo: false
+services:
+  - docker
 scala:
   - 2.12.6
 jdk:
   - oraclejdk8
 before_script:
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker pull ryandkb8/tasks-postgresql:latest
   - docker run -d -p 127.0.0.1:5430:5432 ryandkb8/tasks-postgresql:latest
 script:
@@ -13,3 +16,8 @@ script:
 branches:
   only:
     - master
+deploy:
+  provider: script
+  script: bash release.sh
+  on:
+    branch: master
