--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ scala:
 jdk:
   - oraclejdk8
 before_script:
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
   - docker pull ryandkb8/tasks-postgresql:latest
   - docker run -d -p 127.0.0.1:5430:5432 ryandkb8/tasks-postgresql:latest
 script:
