Add dockerignore file and cors filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,8 @@ play.http.secret.key=${?APPLICATION_SECRET}
 
 db.default.driver=org.postgresql.Driver
 
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
 db.default.url="jdbc:postgresql://localhost:5432/tasks"
 db.default.url=${?DB_DEFAULT_URL}
 
