Update cors filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,8 @@ play.http.secret.key=${?APPLICATION_SECRET}
 
 db.default.driver=org.postgresql.Driver
 
-play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.enabled += play.filters.cors.CORSFilter
+play.modules.enabled += utils.ClockModule
 
 db.default.url="jdbc:postgresql://localhost:5432/tasks"
 db.default.url=${?DB_DEFAULT_URL}
@@ -12,8 +13,6 @@ db.default.username=${?DB_DEFAULT_USERNAME}
 
 db.default.password="tasks"
 db.default.password=${?DB_DEFAULT_PASSWORD}
-
-play.modules.enabled += utils.ClockModule
 
 tasks-context {
   fork-join-executor {
